<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_item">Add item</string>
    <string name="profile">Profile</string>
    <string name="dkk_kr">kr.</string>
    <string name="choose_category">Choose a category</string>
    <string name="enter_details">Enter details</string>
    <string name="select_date">Select The Date</string>
    <string name="i_agree">I agree to the terms of use</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="dashboard">Dashboard</string>
    <string name="no_transactions">There haven\'t been any transactions logged yet</string>
    <string name="categorised_transactions">Categorised transactions</string>
    <string name="hub">Hub</string>
    <string name="puzzles">puzzles</string>
    <string name="danish_tax_system_breakdown_su_calculations_depending_on_tax_card">Danish Tax System breakdown + Salary/SU calculations</string>
    <string name="keep_track_of_your_savings_progress">Keep track of your savings progress</string>
    <string name="next_step">Next step</string>
    <string name="add_expense">Add Transaction</string>
    <string name="taxes_breakdown">Taxes Breakdown</string>
    <string name="savings_tracker">Savings tracker</string>
    <string name="dollar">dollar</string>
    <string name="_5000">5000</string>
    <string name="_6321">6321</string>
    <string name="_0">0</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="close">Close</string>
    <string name="upload_photo">Upload photo</string>
    <string name="edit_expense">EDIT EXPENSE</string>
    <string name="currency_preferences">Currency preferences</string>
    <string name="edit_transaction">Edit transaction</string>
</resources>