<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bandreit.expensetracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bandreit.expensetracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.bandreit.expensetracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/add_item_1"
        android:name="com.bandreit.expensetracker.ui.addItem.AddItemStep1Fragment"
        android:label="fragment_add_item"
        tools:layout="@layout/fragment_add_item1" >
        <action
            android:id="@+id/action_add_item_1_to_add_item_22"
            app:destination="@id/add_item_2"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_enter" />
    </fragment>

    <fragment
        android:id="@+id/add_item_2"
        android:name="com.bandreit.expensetracker.ui.addItem.AddItemStep2Fragment"
        android:label="fragment_add_item"
        tools:layout="@layout/fragment_add_item2" >
        <action
            android:id="@+id/action_add_item_2_to_addItemStep3Fragment"
            app:destination="@id/add_item_3" />
        <action
            android:id="@+id/action_add_item_2_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/add_item_3"
        android:name="com.bandreit.expensetracker.ui.addItem.AddItemStep3Fragment"
        android:label="fragment_add_item3"
        tools:layout="@layout/fragment_add_item3" />
</navigation>