<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg_activity"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/layout_bg2"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/dollar"
                android:src="@drawable/card" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="Balance: "
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/current_balance"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/_0"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="30sp"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balance_currency"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:paddingLeft="1dp"
                android:text="dkk"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/balanceLineChart"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/layout_bg2"
            android:paddingBottom="5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/recent_transactions"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expense_items_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/no_items_text"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="240dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/transacionProgressBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="240dp"
        android:indeterminateTint="@color/blue"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>