<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg_activity"
    tools:context=".ui.addItem.AddItemStep2Fragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="Type"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/expense_type_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/expense_type_buttons"
        android:layout_width="325dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_bg2"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/expenseTypeExpense"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_minus_circle" />

        <ImageView
            android:id="@+id/expenseTypeIncome"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_add_circle_blue" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="Amount"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_type_buttons"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="Name/Place"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/expense_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_bg2"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_type_buttons">

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="49.04"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dkk_kr"
            android:textSize="20dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/expense_item_name"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:layout_weight="2"
        android:background="@drawable/layout_bg2"
        android:ems="10"
        android:gravity="center"
        android:hint="Netto"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <TextView
        android:id="@+id/textVie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="Date"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/date_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/date_selector"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_bg2"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Date"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_item_name" />

    <Button
        android:id="@+id/upload_photo"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/upload_photo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_selector">

    </Button>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_expense"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/next_step"
        android:text="@string/add_expense"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_photo" />
</androidx.constraintlayout.widget.ConstraintLayout>